# connectlog

./: .env.example  .gitignore  README.md  app.py  hr_profiles.example.json  pyproject.toml  requirements.txt  setup_oauth.py
.github/: copilot-instructions.md
.github/workflows/: lint.yml
