[project]
name = "connectlog"
version = "0.1.0"
description = "Flask API to fetch Garmin Connect health data for ME/CFS PEM threshold research"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask",
    "garminconnect",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "codespell",
    "pre-commit",
    "prettier",
    "ruff",
]

[tool.uv]
required-version = ">=0.9.13"

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.codespell]
skip = '*.http,*.json'
